2001-02-06  Christoph Reichenbach  <jameson@linuxgames.com>

	* vast amount of files: "Fixed" alpha_kludges.h includes. I'll get
	nightmares from the sheer ugliness I introduced again.
	
	* actorio.cc: Fixed typo (?) in line 296: Game::Game::get_avname()

2001-02-04  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
	* keys.cc/h: moved some declarations from .h to .cc

2001-02-04  Max Horn  <max@quendi.de>
	* keys.cc: fixed to compile on proper C++ compilers ;). Also, on mac,
	  "Help" will show "Cmd" instead of "Alt"
	* keys.h: change struct Action to contain a char* instead of a std::string
	* tools/expack.cc: rewrote the -i code to handle empty lines properly;
	  also, some code cleanup
	* shapes/shapevga.cc: fixed type error

2001-02-04  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
	* keys.cc/h, keyactions.cc/h: dynamic keybinder implemented
	* exult.cc,game.cc: use dynamic keybinder
	* data/default.key, data/flx.in: default keybindings
	* Makefile.*: build keybinder
	* menulist.cc: removed some debug output
	* cheat.cc/h: added some new functions

2001-02-04  Jeff Freedman  <jeff@amy.nerble.net>

	* Fixed bug where monsters weren't attacking.
	* Weapons:  Guessing at ranges.  Dragon's breath works now.

2001-02-03  Jeff Freedman  <jeff@amy.nerble.net>

	* shapes, etc.:  Figured out more info. about weapons.
	Triple-crossbow now works, and sling, blowgun work like the
	original (unlimited ammo).

2001-02-03  Max Horn  <max@quendi.de>
	* actors.cc: "fixed" Marsten crash (teleport code was buggy)

2001-02-01  Jeff Freedman  <jeff@amy.nerble.net>

	* Mass-death spell now works.

2001-01-31  Jeff Freedman  <jeff@amy.nerble.net>

	* Fixed last night's conversation fix :-(

2001-01-30  Jeff Freedman  <jeff@amy.nerble.net>

	* schedule.cc (Sit_schedule): Wait before sitting a 2nd time.
	Fixes bug in SI Knight's Test.
	* actors.cc: Actor::unready_weapon() to fix Krieg.
	* conversation.cc:  Show correct Avatar face in SI.
