@@ -5,6 +5,11 @@
 	
 	* actorio.cc: Fixed typo (?) in line 296: Game::Game::get_avname()
 
+2001-02-05  Jeff Freedman  <jeff@amy.nerble.net>
+
+	* combat.cc: Glass sword self-destructs.
+	* actors.cc:  Fiddled with ::follow().
+
 2001-02-04  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
 	* keys.cc/h: moved some declarations from .h to .cc
 
